@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-05-XX  Release 7.14.7                                     ---
 ----------------------------------------------------------------------
 
+* swapped meaning of -p and -o arguments to 'mirror' - Sean Morrison
 * major overhaul of archer's appearance and layout - Bob Parker
 * removal of archer's separate experience modes - Bob Parker
 * add a left handed winding flag to the coil tool - Cliff Yapp
